sandc/test/fixtures/astRegression/shouldFail/productions/statement/DoMissingWhile.sand
pub class DoMissingWhile {
    foo() {
        do {

        }
    }
}